--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,5 +25,7 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'com.acmerobotics.dashboard:dashboard:0.5.1'
+
 
 }
